# rust-chat-app

./: README.md
client/: Cargo.toml  history.json  server_pub.pem
client/src/: client.rs  crypto.rs  data.rs  main.rs
server/: Cargo.toml
server/src/: client.rs  crypto.rs  data.rs  db.rs  main.rs  server.rs
