[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
base64 = "0.13.0"
aes = { version = "0.7.5", features = ["ctr"] }
block-modes = "0.8.1"
hex-literal = "0.3.4"
rsa = "0.5.0"
rand = "0.8.4"
openssl = "0.10.38"
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }