[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
aes = { version = "0.7.5", features = ["ctr"] }
hex-literal = "0.3.4"
rsa = "0.5.0"
rand = "0.8.4"
serde_json = "1.0.73"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }