[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
postgres = "0.19.2"
chrono = "0.4.19"